--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "studiobonito/silverstripe-shortcodes",
-    "description": "Shortcodes Module is based on Daniel Hensby's post at SSbits. It adds a shortcode for inserting YouTube videos to pages, as well as adding a button to the TinyMCE WYSIWYG editor.",
+    "description": "ShortCodes Module is based on Daniel Hensby's post at SSbits. It adds a shortcode for inserting YouTube and Vimeo videos to pages, as well as adding a buttons to the TinyMCE WYSIWYG editor.",
     "type": "silverstripe-module",
     "keywords": ["silverstripe", "shortcodes", "vimeo", "youtube", "video", "shortcode", "wysiwyg", "tinymce", "cms"],
     "license": "BSD-2-Clause",
