--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         }
     ],
     "require": {
+        "php": ">=5.3.0",
         "silverstripe/framework": ">=2.4"
     },
     "support": {
